# draw-ai

./: .gitignore
ai/: evolution.hpp  model.hpp  utils.hpp
ai/test/: evolution.cc  model.cc  utils.cc
draw-ai/: CMakeLists.txt  main.cc
image/: image.hpp
linalg/: matrix-data.hpp  matrix.hpp
linalg/test/: matrix.cc  matrix.cu
thread/: pool.hpp
